--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,25 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {},
-    "version": "1.0.0",
+    "version": "1.1.0",
+    "require": {
+        "php": ">=5.6.4",
+        "laravel/framework": "5.3.*",
+        "league/fractal": "^0.14.0",
+        "brozot/laravel-fcm": "^1.2",
+        "doctrine/dbal": "^2.5",
+        "barryvdh/laravel-cors": "^0.8.2",
+        "knplabs/knp-snappy": "^0.4.3",
+        "h4cc/wkhtmltopdf-amd64": "0.12.x",
+        "h4cc/wkhtmltoimage-amd64": "0.12.x"
+    },
+    "require-dev": {
+        "fzaninotto/faker": "~1.4",
+        "mockery/mockery": "0.9.*",
+        "phpunit/phpunit": "~5.0",
+        "symfony/css-selector": "3.1.*",
+        "symfony/dom-crawler": "3.1.*"
+    },
 
     "autoload": {
         "classmap": [
@@ -20,5 +37,31 @@
             "App\\": "app/",
             "Aii\\Admin\\": "package/aii/admin/src/"
         }
+    },
+
+    "autoload-dev": {
+        "classmap": [
+            "tests/TestCase.php"
+        ]
+    },
+    "scripts": {
+        "post-root-package-install": [
+            "php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+        ],
+        "post-create-project-cmd": [
+            "php artisan key:generate"
+        ],
+        "post-install-cmd": [
+            "Illuminate\\Foundation\\ComposerScripts::postInstall",
+            "php artisan optimize"
+        ],
+        "post-update-cmd": [
+            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
+            "php artisan optimize"
+        ]
+    },
+    "config": {
+        "preferred-install": "dist"
     }
+
 }
